[BP] MB-59702: Don't access null Stream pointer

Change a log message so there is no access to a null pointer.

Change-Id: I7f814d0292c2ffa5cd9c52f692d3d854575367a4
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/201297
Tested-by: Jim Walker <jim@couchbase.com>
Well-Formed: Restriction Checker
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>